Fix text-alignment in the "Advanced settings" section

--- a/sites/all/themes/walkhub_theme/sass/modules/_edit_forms.sass
+++ b/sites/all/themes/walkhub_theme/sass/modules/_edit_forms.sass
@@ -212,6 +212,7 @@ input.pure-input-rounded, .pure-input-rounded
 input
   &[type="radio"],
   &[type="checkbox"]
-    float: left
-    margin-right: 5px
     clear: left
+    float: left
+    margin-bottom: 0
+    margin-right: 5px
